gccida/c1/allocate_reg_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:2683:7: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
free( reg_pref_0); 
      ^~~~~~~~~~
      reg_pref
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:2730:12: error: assigning to 'struct reg_pref' from incompatible type 'int'
v14[v12++] = 0; 
           ^ ~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:2738:6: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
if ( reg_pref_0 ) 
     ^~~~~~~~~~
     reg_pref
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:2739:1: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
reg_pref_0 = reg_pref_buffer; 
^~~~~~~~~~
reg_pref
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/allocate_reg_info/src/obj/regclass.o] Error 1
